@@ -18,10 +18,11 @@
 #'   input vector (not needed if input is an audio file)
 #' @param SPL_measured sound pressure level at which the sound is presented, dB
 #'   (set to 0 to skip analyzing subjective loudness)
-#' @param cutFreq (>0 to Nyquist, Hz) repeat the calculation of spectral
-#'   descriptives after discarding all info above \code{cutFreq}.
+#' @param cutFreq (2 * pitchCeiling to Nyquist, Hz) repeat the calculation of
+#'   spectral descriptives after discarding all info above \code{cutFreq}.
 #'   Recommended if the original sampling rate varies across different analyzed
-#'   audio files
+#'   audio files. Note that "entropyThres" applies only to this frequency range,
+#'   which also affects which frames will not be analyzed with pitchAutocor.
 #' @param nFormants the number of formants to extract per STFT frame (0 = no
 #'   formant analysis). Calls \code{\link[phonTools]{findformants}} with default
 #'   settings
@@ -253,74 +254,76 @@
 #'                    SPL_measured = 40)$loudness)
 #' median(getRMS(sound2, windowLength = 25, overlap = 50, scale = 1))
 #' }
-analyze = function(x,
-                   samplingRate = NULL,
-                   dynamicRange = 80,
-                   silence = 0.04,
-                   scale = NULL,
-                   SPL_measured = 70,
-                   Pref = 2e-5,
-                   windowLength = 50,
-                   step = NULL,
-                   overlap = 50,
-                   wn = 'gaussian',
-                   zp = 0,
-                   cutFreq = 6000,
-                   nFormants = 3,
-                   pitchMethods = c('autocor', 'spec', 'dom'),
-                   entropyThres = 0.6,
-                   pitchFloor = 75,
-                   pitchCeiling = 3500,
-                   priorMean = 300,
-                   priorSD = 6,
-                   priorPlot = FALSE,
-                   nCands = 1,
-                   minVoicedCands = NULL,
-                   domThres = 0.1,
-                   domSmooth = 220,
-                   autocorThres = 0.7,
-                   autocorSmooth = NULL,
-                   cepThres = 0.3,
-                   cepSmooth = 400,
-                   cepZp = 0,
-                   specThres = 0.3,
-                   specPeak = 0.35,
-                   specSinglePeakCert = 0.4,
-                   specHNRslope = 0.8,
-                   specSmooth = 150,
-                   specMerge = 1,
-                   shortestSyl = 20,
-                   shortestPause = 60,
-                   interpolWin = 75,
-                   interpolTol = 0.3,
-                   interpolCert = 0.3,
-                   pathfinding = c('none', 'fast', 'slow')[2],
-                   annealPars = list(maxit = 5000, temp = 1000),
-                   certWeight = .5,
-                   snakeStep = 0.05,
-                   snakePlot = FALSE,
-                   smooth = 1,
-                   smoothVars = c('pitch', 'dom'),
-                   summary = FALSE,
-                   summaryFun = c('mean', 'median', 'sd'),
-                   plot = TRUE,
-                   showLegend = TRUE,
-                   savePath = NA,
-                   plotSpec = TRUE,
-                   pitchPlot = list(
-                     col = rgb(0, 0, 1, .75),
-                     lwd = 3
-                   ),
-                   candPlot = list(),
-                   ylim = NULL,
-                   xlab = 'Time, ms',
-                   ylab = 'kHz',
-                   main = NULL,
-                   width = 900,
-                   height = 500,
-                   units = 'px',
-                   res = NA,
-                   ...) {
+analyze = function(
+  x,
+  samplingRate = NULL,
+  dynamicRange = 80,
+  silence = 0.04,
+  scale = NULL,
+  SPL_measured = 70,
+  Pref = 2e-5,
+  windowLength = 50,
+  step = NULL,
+  overlap = 50,
+  wn = 'gaussian',
+  zp = 0,
+  cutFreq = min(samplingRate / 2, max(7000, pitchCeiling * 2)),
+  nFormants = 3,
+  pitchMethods = c('autocor', 'spec', 'dom'),
+  entropyThres = 0.6,
+  pitchFloor = 75,
+  pitchCeiling = 3500,
+  priorMean = 300,
+  priorSD = 6,
+  priorPlot = FALSE,
+  nCands = 1,
+  minVoicedCands = NULL,
+  domThres = 0.1,
+  domSmooth = 220,
+  autocorThres = 0.7,
+  autocorSmooth = NULL,
+  cepThres = 0.3,
+  cepSmooth = 400,
+  cepZp = 0,
+  specThres = 0.3,
+  specPeak = 0.35,
+  specSinglePeakCert = 0.4,
+  specHNRslope = 0.8,
+  specSmooth = 150,
+  specMerge = 1,
+  shortestSyl = 20,
+  shortestPause = 60,
+  interpolWin = 75,
+  interpolTol = 0.3,
+  interpolCert = 0.3,
+  pathfinding = c('none', 'fast', 'slow')[2],
+  annealPars = list(maxit = 5000, temp = 1000),
+  certWeight = .5,
+  snakeStep = 0.05,
+  snakePlot = FALSE,
+  smooth = 1,
+  smoothVars = c('pitch', 'dom'),
+  summary = FALSE,
+  summaryFun = c('mean', 'median', 'sd'),
+  plot = TRUE,
+  showLegend = TRUE,
+  savePath = NA,
+  plotSpec = TRUE,
+  pitchPlot = list(
+    col = rgb(0, 0, 1, .75),
+    lwd = 3
+  ),
+  candPlot = list(),
+  ylim = NULL,
+  xlab = 'Time, ms',
+  ylab = 'kHz',
+  main = NULL,
+  width = 900,
+  height = 500,
+  units = 'px',
+  res = NA,
+  ...
+) {
   ## preliminaries
   if ('osc' %in% names(match.call()) |
       'osc_dB' %in% names(match.call())) {
